--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tgk.integration" >
+    package="com.example.tgk.groupProject" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".TipCalculatorActivity"
+            android:name="com.example.tgk.groupProject.TipCalculatorActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,11 +17,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity2"/>
+            android:name="com.example.tgk.groupProject.MainActivity2"/>
         <activity
-            android:name=".CarbCalculatorActivity"/>
+            android:name="com.example.tgk.groupProject.CarbCalculatorActivity"/>
         <activity
-            android:name=".MainActivity4"/>
+            android:name="com.example.tgk.groupProject.MainActivity4"/>
     </application>
 
 </manifest>
